admin service changed

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -7,6 +7,8 @@ invalidGender = Invalid gender, User can not be created!
 cannotChangeAdmin = You can not change super admin permissions!
 cannotSetAdmin = You can not add new admin!
 authorityIdIncorrect = Authorities id is incorrect!
+weekdaysError = The days of the week were entered incorrectly!
+timeFormatError = The clock format was entered incorrectly!
 
 
 
