--- a/src/main/resources/i18n/message_uz.properties
+++ b/src/main/resources/i18n/message_uz.properties
@@ -7,6 +7,8 @@ invalidGender = Mavjud bo'lmagan jins, Foydalanuvchi yaratilmadi!
 cannotChangeAdmin = Super administrator ruxsatlarini o?zgartira olmaysiz!
 cannotSetAdmin = Siz yangi admin qo'sha olmaysiz!
 authorityIdIncorrect = Ruxsatlar idsi noto'g'ri !
+weekdaysError = Hafta kunlari xato kiritildi!
+timeFormatError = Soat formati xato kirtildi!
 
 
 
